--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <div class="container">
-            <h1>EliteEagle Calculator 📲...</h1>
+            <h1>EliteEagle Calculator <i class="fa fa-calculator headicon"></i> </h1>
             <div class="calculator">
                 <input type="text" class="result" id="result" value="0" maxlength="16">
                 <div class="resscreen" id="resscreen"></div>
