--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
     <main>
         <div class="container">
-            <h1>EliteEagle Calculator 📲...</h1>
+            <h1>EliteEagle Calculator <i class="fa fa-calculator headicon"></i> </h1>
             <div class="calculator">
                 <input type="text" class="result" id="result" value="0" maxlength="16">
                 <div class="resscreen" id="resscreen"></div>
                 <table>
                     <tr>
                         <td><button class="numkey Ackey" id="clear"> AC </button></td>
-                        <td><button class="numkey"> % </button></td>
+                        <td><button class="numkey BtnsKey"> % </button></td>
                         <td>
                             <button class="numkey backkey0" id="backSpcBtn"> 
                                 <i class=" fa fa-long-arrow-left"> </i>
@@ -27,58 +27,58 @@
                         <td><button class="numkey opkey"> / </button></td>
                     </tr>
                     <tr>
-                        <td><button class="numkey"> 7 </button></td>
-                        <td><button class="numkey"> 8 </button></td>
-                        <td><button class="numkey"> 9 </button></td>
+                        <td><button class="numkey BtnsKey"> 7 </button></td>
+                        <td><button class="numkey BtnsKey"> 8 </button></td>
+                        <td><button class="numkey BtnsKey"> 9 </button></td>
                         <td><button class="numkey opkey"> * </button></td>
                     </tr>
                     <tr>
-                        <td><button class="numkey"> 4 </button></td>
-                        <td><button class="numkey"> 5 </button></td>
-                        <td><button class="numkey"> 6 </button></td>
+                        <td><button class="numkey BtnsKey"> 4 </button></td>
+                        <td><button class="numkey BtnsKey"> 5 </button></td>
+                        <td><button class="numkey BtnsKey"> 6 </button></td>
                         <td><button class="numkey opkey"> - </button></td>
                     </tr>
                     <tr>
-                        <td><button class="numkey"> 1 </button></td>
-                        <td><button class="numkey"> 2 </button></td>
-                        <td><button class="numkey"> 3 </button></td>
+                        <td><button class="numkey BtnsKey"> 1 </button></td>
+                        <td><button class="numkey BtnsKey"> 2 </button></td>
+                        <td><button class="numkey BtnsKey"> 3 </button></td>
                         <td><button class="numkey opkey"> + </button></td>
                     </tr>
                     <tr class="Bottomkey">
-                        <td><button class="numkey lrgBtn " id="zero"> 0 </button></td>
-                        <td><button class="numkey lrgBtn"> . </button></td>
+                        <td><button class="numkey lrgBtn BtnsKey" id="zero"> 0 </button></td>
+                        <td><button class="numkey lrgBtn BtnsKey"> . </button></td>
                         <td><button class="numkey assBtn" id="EqBtn" > = </button></td>
-                        <td><button class="Scikey backkey " id="SciBtn" > Sci </button></td>
+                        <td><button class="Scikey backkey BtnsKey" id="SciBtn" > Sci </button></td>
                     </tr>
                 </table>
                 <div class="SciSection" id="SciSection">
                     <table>
                         <tr>
-                            <td><button class="numkey backkey"> ( </button></td>
-                            <td><button class="numkey backkey"> ) </button></td>
-                            <td><button class="numkey"> e </button></td>
-                            <td><button class="numkey"> ! </button></td>
+                            <td><button class="numkey Btnclr backkey"> ( </button></td>
+                            <td><button class="numkey Btnclr backkey"> ) </button></td>
+                            <td><button class="numkey Btnclr"> e </button></td>
+                            <td><button class="numkey Btnclr"> ! </button></td>
                         </tr>
                         <tr>
-                            <td><button class="numkey backkey"> <sup>2</sup>√ </button></td>
-                            <td><button class="numkey backkey"> <sup>3</sup>√ </button></td>
-                            <td><button class="numkey"> ^ </button></td>
-                            <td><button class="numkey backkey"> π </button></td>
+                            <td><button class="numkey Btnclr backkey"> <sup>2</sup>√ </button></td>
+                            <td><button class="numkey Btnclr backkey"> <sup>3</sup>√ </button></td>
+                            <td><button class="numkey Btnclr"> ^ </button></td>
+                            <td><button class="numkey Btnclr backkey"> π </button></td>
                         </tr>
                         <tr>
-                            <td><button class="numkey backkey"> sin </button></td>
-                            <td><button class="numkey backkey"> cos </button></td>
-                            <td><button class="numkey backkey"> log </button></td>
-                            <td><button class="numkey backkey"> tan </button></td>
+                            <td><button class="numkey Btnclr backkey"> sin </button></td>
+                            <td><button class="numkey Btnclr backkey"> cos </button></td>
+                            <td><button class="numkey Btnclr backkey"> log </button></td>
+                            <td><button class="numkey Btnclr backkey"> tan </button></td>
                         </tr>
                         <tr>
-                            <td><button class="numkey backkey"> l2e </button></td>
-                            <td><button class="numkey backkey"> l10e </button></td>
-                            <td><button class="numkey backkey"> exp </button></td>
-                            <td><button class="numkey backkey" > rad </button></td>                            
+                            <td><button class="numkey Btnclr backkey"> l2e </button></td>
+                            <td><button class="numkey Btnclr backkey"> l10e </button></td>
+                            <td><button class="numkey Btnclr backkey"> exp </button></td>
+                            <td><button class="numkey Btnclr backkey" > rad </button></td>                            
                         </tr>
                         <tr class="BottomSci">
-                            <td><button class="numkey backkey"> deg </button></td>
+                            <td><button class="numkey Btnclr backkey"> deg </button></td>
                             <td><button class="arrowHead" id="closeSciBtn"> <span> <i class="fa fa-arrow-circle-left "> close </i></span></button></td>
                         </tr>
                         
